[package]
name = "swt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.20.0", features = ["invocation"] }
lazy_static = "1.4.0"
convert_case = "0.6.0"
num = "0.4.0"
swt-rs-macros = { path = "lib/swt-rs-macros" }

[workspace]
members = [
    ".",
    "lib/swt-rs-macros",
]